--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,9 @@
     max-height: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     cursor: pointer;
+    touch-action: pan-y;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 /* CONTROLS STYLES */
